tests/ui-unstable/no-arguments.stderr
error: argument must be a single string literal, but got 0 tokens
 --> $DIR/no-arguments.rs:6:5
  |
6 |     indoc!();
  |     ^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
